--- a/web/backend/.env.example
+++ b/web/backend/.env.example
@@ -1,6 +1,6 @@
 APP_SLUG=app-name
 MP_TOKEN=your-mixpanel-project-token
-DATABASE_URL=mysql://user:password@localhost:3306/mydb
+DATABASE_URL=postgres://postgres:password@localhost:5432/go-ride-coding-test
 SHOPIFY_API_KEY="YOUR_SHOPIFY_API_KEY"
 SHOPIFY_API_SECRET="YOUR_SHOPIFY_SECRET"
 HOST="YOUR_TUNNEL_URL"
