chore: 各種設定更新

--- a/web/backend/package.json
+++ b/web/backend/package.json
@@ -8,6 +8,7 @@
     "dev": "cross-env NODE_ENV=development nodemon --experimental-specifier-resolution=node index.ts",
     "build": "tsc --skipLibCheck",
     "prepare": "npx prisma generate",
+    "prisma:dev": "npx prisma migrate dev --name",
     "prisma:migrate": "npx prisma migrate deploy",
     "prisma:reset": "npx prisma migrate reset",
     "serve": "cross-env NODE_ENV=production node --experimental-specifier-resolution=node dist/index.js",
@@ -38,6 +39,7 @@
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.3",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemon": "^1.19.6",
     "@types/serve-static": "^1.15.5",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
@@ -47,6 +49,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.0.2",
     "prettier": "^3.1.0",
     "pretty-quick": "^3.1.3",
