--- a/web/backend/.eslintrc.json
+++ b/web/backend/.eslintrc.json
@@ -26,6 +26,7 @@
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
     "react/react-in-jsx-scope": 0,
-    "@typescript-eslint/ban-ts-comment": 0
+    "@typescript-eslint/ban-ts-comment": 0,
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
