--- a/web/frontend/.eslintrc.json
+++ b/web/frontend/.eslintrc.json
@@ -27,6 +27,7 @@
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
     "react/react-in-jsx-scope": 0,
-    "@typescript-eslint/ban-ts-comment": 0
+    "@typescript-eslint/ban-ts-comment": 0,
+    "react/prop-types": "off"
   }
 }
