--- a/web/backend/package.json
+++ b/web/backend/package.json
@@ -57,5 +57,8 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.3.3",
     "vitest": "^1.0.1"
+  },
+  "prisma": {
+    "schema": "./prisma/schema.prisma"
   }
 }
